Report extension availability in gpu::Capabilities

For extensions that require explicit enabling, it is unclear if
gpu::Capabilities should report the availability of an extension or its
presence.

Change the meaning of gpu::Capabilities to reflect the availability of
an extension, since that information is subject to change over time.

Bug: 777748
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I1817d6b22f78301dae5bb6e7b9cadc83d0420b31
Reviewed-on: https://chromium-review.googlesource.com/750402
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513517}
Former-commit-id: a987ee85bad15a80c2060b0f162b4e1e7da4bc25